Fix spacing and add auto scroll

--- a/src/css/partials/_styles.scss
+++ b/src/css/partials/_styles.scss
@@ -37,8 +37,8 @@ input {
   width: 100px;
   height: 100px;
 }
-.trips-display {
-  height: 50vh;
+.trips-display, .destinations-display {
+  height: 75vh;
   overflow-y: scroll;
 }
 article {
